--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -175,6 +175,7 @@ allow 162.251.5.152;
 allow 163.172.45.102;
 allow 163.5.143.76;
 allow 164.132.172.209;
+allow 165.73.242.163;
 allow 166.70.207.2;
 allow 167.99.208.41;
 allow 171.25.193.20;
@@ -284,7 +285,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
@@ -1040,6 +1040,7 @@ allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
+allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
 allow 2605:6400:d814:4181::1;
@@ -1204,6 +1205,7 @@ allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:bb:7865:65ff:fe6d:7fd4;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
+allow 2a0b:4140:5967::2;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1437,6 +1439,7 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 34.230.232.83;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.190.85;
@@ -1451,7 +1454,6 @@ allow 37.252.255.135;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.97.116.244;
-allow 44.204.32.204;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
@@ -1493,6 +1495,7 @@ allow 45.15.157.177;
 allow 45.33.20.42;
 allow 45.61.185.172;
 allow 45.61.186.203;
+allow 45.61.187.200;
 allow 45.66.35.10;
 allow 45.66.35.20;
 allow 45.66.35.21;
@@ -1604,6 +1607,7 @@ allow 72.253.202.121;
 allow 74.82.47.194;
 allow 77.105.146.42;
 allow 77.220.196.253;
+allow 77.221.153.68;
 allow 77.221.157.237;
 allow 77.221.159.184;
 allow 77.221.159.189;
@@ -1632,6 +1636,7 @@ allow 80.67.172.162;
 allow 80.82.78.14;
 allow 80.94.92.106;
 allow 81.16.33.42;
+allow 81.17.28.95;
 allow 82.118.242.36;
 allow 82.153.138.182;
 allow 82.153.138.24;
