--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -175,6 +175,7 @@ set_real_ip_from 162.251.5.152;
 set_real_ip_from 163.172.45.102;
 set_real_ip_from 163.5.143.76;
 set_real_ip_from 164.132.172.209;
+set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
 set_real_ip_from 167.99.208.41;
 set_real_ip_from 171.25.193.20;
@@ -284,7 +285,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.165.190.111;
 set_real_ip_from 185.170.114.25;
@@ -1040,6 +1040,7 @@ set_real_ip_from 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 set_real_ip_from 2605:6400:30:f8d5::1;
 set_real_ip_from 2605:6400:30:f8da:2b2:a293:30ad:506d;
 set_real_ip_from 2605:6400:30:f920:f523:28ef:3617:8b86;
+set_real_ip_from 2605:6400:40:fde8:11c7:119b:aaf9:2722;
 set_real_ip_from 2605:6400:40:fe09::2;
 set_real_ip_from 2605:6400:d814:1b8::4;
 set_real_ip_from 2605:6400:d814:4181::1;
@@ -1204,6 +1205,7 @@ set_real_ip_from 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 set_real_ip_from 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 set_real_ip_from 2a0a:4cc0:3:bb:7865:65ff:fe6d:7fd4;
 set_real_ip_from 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
+set_real_ip_from 2a0b:4140:5967::2;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
 set_real_ip_from 2a0b:f4c0:16c:1::1;
 set_real_ip_from 2a0b:f4c0:16c:11::1;
@@ -1437,6 +1439,7 @@ set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 34.230.232.83;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.190.85;
@@ -1451,7 +1454,6 @@ set_real_ip_from 37.252.255.135;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
-set_real_ip_from 44.204.32.204;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
@@ -1493,6 +1495,7 @@ set_real_ip_from 45.15.157.177;
 set_real_ip_from 45.33.20.42;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.61.186.203;
+set_real_ip_from 45.61.187.200;
 set_real_ip_from 45.66.35.10;
 set_real_ip_from 45.66.35.20;
 set_real_ip_from 45.66.35.21;
@@ -1604,6 +1607,7 @@ set_real_ip_from 72.253.202.121;
 set_real_ip_from 74.82.47.194;
 set_real_ip_from 77.105.146.42;
 set_real_ip_from 77.220.196.253;
+set_real_ip_from 77.221.153.68;
 set_real_ip_from 77.221.157.237;
 set_real_ip_from 77.221.159.184;
 set_real_ip_from 77.221.159.189;
@@ -1632,6 +1636,7 @@ set_real_ip_from 80.67.172.162;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 80.94.92.106;
 set_real_ip_from 81.16.33.42;
+set_real_ip_from 81.17.28.95;
 set_real_ip_from 82.118.242.36;
 set_real_ip_from 82.153.138.182;
 set_real_ip_from 82.153.138.24;
