--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -122,7 +122,6 @@ allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.10.21;
-allow 130.193.15.186;
 allow 135.125.205.25;
 allow 136.244.111.163;
 allow 138.59.18.110;
@@ -175,6 +174,7 @@ allow 162.251.5.152;
 allow 163.172.45.102;
 allow 163.5.143.76;
 allow 164.132.172.209;
+allow 165.73.242.163;
 allow 166.70.207.2;
 allow 167.99.208.41;
 allow 171.25.193.20;
@@ -193,6 +193,7 @@ allow 172.105.161.162;
 allow 172.232.164.52;
 allow 172.233.108.234;
 allow 172.234.33.174;
+allow 172.235.29.198;
 allow 172.81.131.110;
 allow 172.81.131.139;
 allow 172.81.131.156;
@@ -925,6 +926,7 @@ allow 2600:3c00::f03c:93ff:fe2b:34f6;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
+allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
@@ -1088,7 +1090,6 @@ allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
-allow 2a02:c206:2095:2624::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:ec0:209:10::4;
 allow 2a02:ed06::222;
@@ -1438,6 +1439,7 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
+allow 34.198.235.115;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.190.85;
@@ -1489,7 +1491,6 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
-allow 45.151.122.34;
 allow 45.15.157.177;
 allow 45.33.20.42;
 allow 45.61.185.172;
@@ -1577,7 +1578,6 @@ allow 5.2.72.110;
 allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.34.182.203;
-allow 54.146.99.18;
 allow 5.42.66.6;
 allow 5.42.80.232;
 allow 5.42.80.233;
@@ -1601,6 +1601,7 @@ allow 66.220.242.222;
 allow 66.78.40.147;
 allow 67.219.109.141;
 allow 71.19.144.106;
+allow 71.19.144.222;
 allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.253.202.121;
