--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -122,12 +122,14 @@ allow 125.212.241.131;
 allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.10.21;
+allow 130.193.15.186;
 allow 135.125.205.25;
 allow 136.244.111.163;
 allow 138.59.18.110;
 allow 139.162.249.209;
 allow 139.99.172.11;
 allow 139.99.8.57;
+allow 141.105.130.89;
 allow 141.98.11.62;
 allow 141.98.119.106;
 allow 142.44.133.81;
@@ -900,7 +902,6 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.24.6;
-allow 23.155.8.104;
 allow 23.165.104.119;
 allow 23.236.122.62;
 allow 23.26.133.152;
@@ -928,7 +929,6 @@ allow 2600:3c03::f03c:92ff:fed8:d9ef;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c08::f03c:94ff:fef8:9872;
 allow 2600:3c0a::f03c:94ff:fe5a:3a17;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::3d;
@@ -1386,6 +1386,7 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:5cc0:1:1::293c:1518;
+allow 2a0c:b641:6f0:fd::2;
 allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
@@ -1439,7 +1440,7 @@ allow 2a12:d8c0:109a:9001::7;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.42.185.134;
-allow 34.198.235.115;
+allow 3.216.13.82;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.190.85;
@@ -1525,6 +1526,7 @@ allow 45.95.169.255;
 allow 45.95.202.48;
 allow 46.165.243.36;
 allow 46.182.21.248;
+allow 46.195.197.61;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1627,7 +1629,6 @@ allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
-allow 79.102.37.209;
 allow 79.124.8.241;
 allow 79.137.198.213;
 allow 80.210.78.252;
