--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -122,12 +122,14 @@ deny 125.212.241.131;
 deny 128.127.180.156;
 deny 128.31.0.13;
 deny 130.193.10.21;
+deny 130.193.15.186;
 deny 135.125.205.25;
 deny 136.244.111.163;
 deny 138.59.18.110;
 deny 139.162.249.209;
 deny 139.99.172.11;
 deny 139.99.8.57;
+deny 141.105.130.89;
 deny 141.98.11.62;
 deny 141.98.119.106;
 deny 142.44.133.81;
@@ -900,7 +902,6 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.24.6;
-deny 23.155.8.104;
 deny 23.165.104.119;
 deny 23.236.122.62;
 deny 23.26.133.152;
@@ -928,7 +929,6 @@ deny 2600:3c03::f03c:92ff:fed8:d9ef;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c08::f03c:94ff:fef8:9872;
 deny 2600:3c0a::f03c:94ff:fe5a:3a17;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::3d;
@@ -1386,6 +1386,7 @@ deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:5cc0:1:1::293c:1518;
+deny 2a0c:b641:6f0:fd::2;
 deny 2a0c:e300::23;
 deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
@@ -1439,7 +1440,7 @@ deny 2a12:d8c0:109a:9001::7;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.42.185.134;
-deny 34.198.235.115;
+deny 3.216.13.82;
 deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.190.85;
@@ -1525,6 +1526,7 @@ deny 45.95.169.255;
 deny 45.95.202.48;
 deny 46.165.243.36;
 deny 46.182.21.248;
+deny 46.195.197.61;
 deny 46.226.164.14;
 deny 46.232.251.191;
 deny 46.234.47.105;
@@ -1627,7 +1629,6 @@ deny 77.91.85.147;
 deny 77.91.86.95;
 deny 77.91.87.79;
 deny 78.142.18.219;
-deny 79.102.37.209;
 deny 79.124.8.241;
 deny 79.137.198.213;
 deny 80.210.78.252;
