--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -264,6 +264,7 @@ deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:138::94d2;
 deny 2a00:1dc0:caff:15::45dc;
+deny 2a00:1dc0:caff:178::982b;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:78::3b85;
 deny 2a00:1dc0:caff:8b::24bd;
