--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -282,6 +282,7 @@ deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
+deny 2a02:6f8:2020:206:b::147;
 deny 2a02:7aa0:1619::ba45:e7f2;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
