--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,7 +5,6 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.208.86.5;
 set_real_ip_from 103.251.167.10;
@@ -135,6 +134,7 @@ set_real_ip_from 143.110.156.176;
 set_real_ip_from 144.172.118.4;
 set_real_ip_from 144.172.118.55;
 set_real_ip_from 144.172.118.76;
+set_real_ip_from 144.172.73.11;
 set_real_ip_from 144.172.73.6;
 set_real_ip_from 144.217.80.80;
 set_real_ip_from 144.24.197.112;
@@ -720,7 +720,6 @@ set_real_ip_from 2001:41d0:701:1100::38fc;
 set_real_ip_from 2001:41d0:701:1100::4f60;
 set_real_ip_from 2001:41d0:800:1f70::;
 set_real_ip_from 2001:41d0:801:2000::15bb;
-set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:4b20:12:f001::105;
@@ -923,9 +922,6 @@ set_real_ip_from 2.58.56.220;
 set_real_ip_from 2.58.56.248;
 set_real_ip_from 2.58.56.43;
 set_real_ip_from 2.58.56.90;
-set_real_ip_from 2.58.95.31;
-set_real_ip_from 2.58.95.35;
-set_real_ip_from 2.58.95.38;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:93ff:fe2b:34f6;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
@@ -1003,11 +999,13 @@ set_real_ip_from 2605:6400:30:f0ed:9151:66ed:6366:5c74;
 set_real_ip_from 2605:6400:30:f174::;
 set_real_ip_from 2605:6400:30:f174:1:1:1:1;
 set_real_ip_from 2605:6400:30:f174:1111:2222:3333:4444;
+set_real_ip_from 2605:6400:30:f174:1:2:3:4;
 set_real_ip_from 2605:6400:30:f174::42;
 set_real_ip_from 2605:6400:30:f174:42:42::;
 set_real_ip_from 2605:6400:30:f174:42:42:42:0;
 set_real_ip_from 2605:6400:30:f174:42:42:42:42;
 set_real_ip_from 2605:6400:30:f174:4:3:2:1;
+set_real_ip_from 2605:6400:30:f174:cafe::;
 set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 set_real_ip_from 2605:6400:30:f307:1712:1a11:9b1c:ab7f;
 set_real_ip_from 2605:6400:30:f307:3aa6:91d4:da12:7eee;
@@ -1053,7 +1051,6 @@ set_real_ip_from 2605:a140:2186:5418::1;
 set_real_ip_from 2605:aa80:0:9::3;
 set_real_ip_from 2607:5300:201:3100::535e;
 set_real_ip_from 2607:5300:205:200::163a;
-set_real_ip_from 2607:5300:205:200::3dde;
 set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:5300:61:785:1:2:3:4;
@@ -1439,16 +1436,17 @@ set_real_ip_from 2a12:5940:c814::2;
 set_real_ip_from 2a12:5940:c826::2;
 set_real_ip_from 2a12:5940:f0a8::2;
 set_real_ip_from 2a12:8641:3:12::;
+set_real_ip_from 2a12:8641:3:24::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.42.185.134;
+set_real_ip_from 3.231.104.212;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.190.85;
 set_real_ip_from 37.120.239.59;
-set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.228.129.128;
 set_real_ip_from 37.228.129.131;
 set_real_ip_from 37.228.129.5;
@@ -1539,7 +1537,6 @@ set_real_ip_from 51.15.59.15;
 set_real_ip_from 51.158.115.62;
 set_real_ip_from 51.178.45.216;
 set_real_ip_from 51.195.166.174;
-set_real_ip_from 51.222.136.218;
 set_real_ip_from 51.222.142.67;
 set_real_ip_from 51.222.84.46;
 set_real_ip_from 51.38.113.118;
@@ -1581,7 +1578,6 @@ set_real_ip_from 5.2.72.110;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.34.182.203;
-set_real_ip_from 54.165.176.104;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
 set_real_ip_from 5.42.80.233;
@@ -1639,7 +1635,6 @@ set_real_ip_from 80.67.172.162;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 80.94.92.106;
 set_real_ip_from 81.16.33.42;
-set_real_ip_from 81.17.28.95;
 set_real_ip_from 82.118.242.36;
 set_real_ip_from 82.197.182.161;
 set_real_ip_from 82.221.131.5;
@@ -1683,7 +1678,6 @@ set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.147.111.87;
 set_real_ip_from 89.185.85.140;
-set_real_ip_from 89.187.143.31;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.36.231.128;
